[FIX] Clear console & Fix Center text

--- a/src/layouts/components/Timeline.astro
+++ b/src/layouts/components/Timeline.astro
@@ -53,7 +53,7 @@ const { pathname } = Astro.url;
                         {type === "line" && <LineChart width={width} subtext={substring}/>}
                       </div>
                     )
-                    console.log(`data: `, extracted);
+                    //console.log(`data: `, extracted);
                   }
                   else jsx = <p class="m-0 p-0"> {ach.description} </p>;
                   
